# dde-dock-switch_graphics_card

./: .clang-format  .gitignore  CMakeLists.txt  CheckConf.sh  Initialize.sh  Intel.sh  NVIDIA.sh  README.md  README.zh_CN.md  Rescue.sh  ResetConf.sh  build.sh  dde-dock-switch_intel.desktop  dde-dock-switch_nvidia.desktop  prime-run.desktop
deb_uos/DEBIAN/: control  md5sums  postinst
deb_uos/opt/apps/com.deepin.dde-dock-graphics-plugin/: info
deb_uos/opt/apps/dde-dock-graphics-plugin/: info
debian/: changelog  control  copyright  dde-dock-graphics-plugin.postinst  dde-dock-graphics-plugin.prerm  rules
deprecated/: switchgraphicscardwidget.cpp  switchgraphicscardwidget.h
gschema/: com.deepin.dde.dock.module.switch-graphics-card.gschema.xml
include/: common.h  singleton.hpp  switchgraphicscardappletwidget.h  switchgraphicscarditem.h  switchgraphicscardplugin.h  switchgraphicscardwidget.h  tipswidget.h  utils.h
oem-menuextensions/: dde-dock-switch_intel.desktop  dde-dock-switch_nvidia.desktop
pkexec/: com.deepin.pkexec.dde-dock-graphics-plugin.policy
resources/: dde-dock-graphics-plugin.desktop  info.in  resources.qrc
resources/gschema/: com.deepin.dde.dock.module.switch-graphics-card.gschema.xml
resources/oem-menuextensions/: prime-run.desktop
resources/pkexec/: com.deepin.pkexec.dde-dock-graphics-plugin.policy
resources/scripts/: CheckGraphics.sh  Initialize.sh  Intel.sh  NVIDIA.sh  Rescue.sh  prime-run.sh
scripts/: CheckConf.sh  CheckGraphics.sh  CheckLocale.sh  Initialize.sh  Intel.sh  NVIDIA.sh  Rescue.sh  ResetConf.sh  prime-run.sh
src/: CMakeLists.txt  SwitchGraphicsCardAppletWidget.cpp  SwitchGraphicsCardAppletWidget.h  SwitchGraphicsCardPlugin.cpp  SwitchGraphicsCardPlugin.h  SwitchGraphicsCardPlugin.json  SwitchGraphicsCardWidget.cpp  SwitchGraphicsCardWidget.h  common.h  dde-dock-graphics-plugin.desktop  ddeUtil.h  info  src.cmake  switch-graphics-card-plugin.cpp  switch-graphics-card-plugin.h  switch-graphics-card.qrc  switchgraphicscardappletwidget.cpp  switchgraphicscardappletwidget.h  switchgraphicscarditem.cpp  switchgraphicscardplugin.cpp  switchgraphicscardplugin.h  switchgraphicscardwidget.cpp  switchgraphicscardwidget.h  tipswidget.cpp  tipswidget.h  utils.cpp
src/deprecated/: switchgraphicscardwidget.cpp
src/translations/: translate_generation.sh  translate_update.sh  zh_CN.qm  zh_CN.ts
translations/: CMakeLists.txt  dde-dock-graphics-plugin_en.ts  dde-dock-graphics-plugin_es.ts  dde-dock-graphics-plugin_zh_CN.ts  es.ts  zh_CN.ts
